C code for day 1

--- a/day01/Makefile
+++ b/day01/Makefile
@@ -1,19 +1,28 @@
+C = /usr/bin/cc
 CPP = /usr/bin/c++
 INCLDIRS =
 LIBDIRS =
 LIBS =
-CFLAGS = -std=c++17 -Wall -O3 $(INCLDIRS)
-OBJECTS = sonar_sweep.o
+CFLAGS = -Wall -O3 $(INCLDIRS)
+CPPFLAGS = -std=c++17 -Wall -O3 $(INCLDIRS)
+CPPOBJECTS = sonar_sweep.o
+COBJECTS = sonar_sweep_c.o
 
-all: sonar_sweep
+all: sonar_sweep sonar_sweep_c
 
 %.o: %.cpp
-	$(CPP) $(CFLAGS) -c $<
+	$(CPP) $(CPPFLAGS) -c $<
 
-sonar_sweep: $(OBJECTS)
-	$(CPP) -o $@ $(OBJECTS) $(LIBDIRS) $(LIBS)
+%.o: %.c
+	$(C) $(CFLAGS) -c $<
+
+sonar_sweep: $(CPPOBJECTS)
+	$(CPP) -o $@ $(CPPOBJECTS) $(LIBDIRS) $(LIBS)
+
+sonar_sweep_c: $(COBJECTS)
+	$(C) -o $@ $(COBJECTS) $(LIBDIRS) $(LIBS)
 
 clean:
 	rm -f *~
 	rm -f *.o
-	rm -f sonar_sweep
+	rm -f sonar_sweep sonar_sweep_c
