Tons of refactoring of the C++ code
This now works for the 3 samples

--- a/day24/Makefile
+++ b/day24/Makefile
@@ -7,9 +7,15 @@ CFLAGS = -Wall -O3 $(INCLDIRS)
 CPPFLAGS = -std=c++17 -Wall -O3 $(INCLDIRS)
 CPPOBJECTS = alu.o Odometer.o Monad.o
 
-all: alu
+all: alu alu_test1 alu_test2 alu_test3
 
 alu.o: Odometer.h Monad.h
+
+alu_test1.o: Monad.h
+
+alu_test2.o: Monad.h
+
+alu_test3.o: Monad.h
 
 Odometer.o: Odometer.h
 
@@ -24,7 +30,16 @@ Monad.o: Monad.h
 alu: $(CPPOBJECTS)
 	$(CPP) -o $@ $(CPPOBJECTS) $(LIBDIRS) $(LIBS)
 
+alu_test1: alu_test1.o Monad.o
+	$(CPP) -o $@ alu_test1.o Monad.o $(LIBDIRS) $(LIBS)
+
+alu_test2: alu_test2.o Monad.o
+	$(CPP) -o $@ alu_test2.o Monad.o $(LIBDIRS) $(LIBS)
+
+alu_test3: alu_test3.o Monad.o
+	$(CPP) -o $@ alu_test3.o Monad.o $(LIBDIRS) $(LIBS)
+
 clean:
 	rm -f *~
 	rm -f *.o
-	rm -f alu
+	rm -f alu alu_test
